--- a/eighth_amendment.html
+++ b/eighth_amendment.html
@@ -71,7 +71,7 @@
 
 <h2>Eighth Amendment</h2>
 <h3 class="regular_text">Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.</h3>
-<img class="responsive_img" src="images/DanielleIsadoraButler_eighthamendment.jpg">
+<img class="responsive_img" src="images/DanielleIsadoraButler_eighthamendment.jpg" alt="Someone leans over the wooden maze navigating the metal ball through the maze"><p style="font-size: small"><i>Photo courtesy of the artist</i></p>
 
 <h2>Danielle Isadora Butler</h2>
 
@@ -93,6 +93,8 @@
 <p>Through the simple interaction of a gimbaled marble maze, I hope to juxtapose the promise of the Eighth Amendment with our evolution thus far.</p>
 
 <p><i>I would like to thank Robin Reid, Olwyn Conway, Keramet Reiter, Paul Grotas, Lea Rosen, Marty Tankleff, Marc M. Howard, Sara Bennett, and Alec Karakatsanis for generously sharing their expertise.</i></p>
+
+<img class="responsive_img" src="images/DanielleIsadoraButler_eighthamendment_2.jpg" alt="Close up of maze from left corner"><p style="font-size: small"><i>Photo by John Sharp</i></p>
 
 <h4>Curator Commentary</h4>
 <p>Of the amendments, the Eighth is the one the average American most likely assumes is followed, but it is also the least likely to be scrutinized to ensure its fair application. It also one of the amendments in which the unspoken assumptions of for whom the laws apply most acutely manifest. Blurring the picture of the unequal protections from the carceral system is the radicalized social landscape of the US. What of those who find themselves ensnared by the US legal system yet outside the protections of the Eighth Amendment? White Americans are statistically far less likely to be imprisoned than Black and Hispanic Americans and Indigenous people, leading to disproportionate representation within the carceral system. If someone’s race sets them apart from the imagined “just” American, is the average American in turn likely to express concern about unjust bails, fines, and punishments?</p>
