--- a/fifth_amendment.html
+++ b/fifth_amendment.html
@@ -69,7 +69,7 @@
 
 <h2>Fifth Amendment</h2>
 <h3 class="regular_text">No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation.</h3>
-<img class="responsive_img" src="images/ShawnPierre_fifthamendment.jpg">
+<img class="responsive_img" src="images/ShawnPierre_fifthamendment.jpg" alt="Two players sit at a table playing ___ vs. ___"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>Shawn Pierre</h2>
 
@@ -88,6 +88,7 @@ Dimensions variable</p>
 
 <p>It is understandably tricky to balance a game that asks players to mislead their opponents using information they create on the fly. Much of this relies on how confident a person feels and if they can evade the truth or weed their way through their opponent’s deception. Ultimately, the experience really comes to life when playing with someone you know well, as players will make assumptions based on information that isn’t present. Rather than avoiding that feeling, a feeling that people would fall into naturally, I found that the game was successful when I leaned into those emotions. These emotions help make the interactions between the Suspect and the Investigator unique, something that can’t be duplicated but can be understood by others who have participated in the game.</p>
 
+<img class="responsive_img" src="images/ShawnPierre_fifthamendment_2.jpg" alt="Close up view above table showing two people playing ___ vs. ___"><p style="font-size: small"><i>Photo by Shay Salehi</i></p>
 
 <h4>Curator Commentary</h4>
 <p>Viewed from the lens of game design, the third clause of the Fifth Amendment—the source of the right against self-incrimination—appears to be a special-case rule to patch over a loophole in the overarching principles of truthful testimony under oath and the presumption of innocence until proven guilty—if the accused can be compelled under oath to implicate themself, how can they be guaranteed the presumption of innocence? This patch, however, led to an exploit: “On the advice of counsel, I invoke my Fifth Amendment right against self-incrimination.” Pleading the Fifth has been viewed as within the letter of the law yet also outside the spirit of fair play within the careful constructs of the US court system. It is a cultural shorthand for the divide between those privileged enough to obtain top-shelf legal support and everyone else.</p>
