--- a/first_amendment.html
+++ b/first_amendment.html
@@ -70,7 +70,7 @@
 
 <h2>First Amendment</h2>
 <h3 class="regular_text">Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</h3>
-<img class="responsive_img" src="images/LexaWalsh_firstamendment.jpg">
+<img class="responsive_img" src="images/LexaWalsh_firstamendment.jpg" alt="Four people gathered around the work, with two of the players touching one of the buttons"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>Lexa Walsh</h2>
 <p>Special thanks to Leo Knapp for technical assistance</p>
@@ -87,6 +87,8 @@
 <p>This work invites courageous dialogue, curiosity, and fun. It also aims to promote equity, not only by inviting users’ participation and creativity but also through its varied content, to create new narratives that become ripe conversation starters. What do we uncover, for instance, when we juxtapose sounds from multiple religious practices, or play protests from opposing ideologies in tandem? I am particularly interested in the weaponization of cancel culture, a right-wing tactic that has been reclaimed by the left, often to its own detriment. Though it can be an effective tool for activism, it can also shut down meaningful exchange, reflecting the punitive culture and oppression many wish to overcome.</p>
 
 <p>I’ve included clips from Fox News along with clips of progressive critic Dan Kovalik and other samples. We need to live in a society that ensures the right to open communication and the practice of it. Simply having these rights does not mean we know how best to wield them. Therefore, I’ve provided tips on active listening in the accompanying zine. With the freedom guaranteed by the First Amendment comes great responsibility.</p>
+
+<img class="responsive_img" src="images/LexaWalsh_firstamendment_2.jpg" alt="CLose up of one-half of the buttons embedded in the table top"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h4>Curator Commentary</h4>
 <p>The First Amendment is a paradox. We retain the right to be heard, but not understood; we retain the right to speak, but also the right to misspeak; we retain the right to report, though not necessarily the truth. The amendment does not—and really, could it?—provide mechanisms to ensure comprehension, to parse truth from fiction, to authenticate. Indeed, the gulf between expression and knowledge is vast.</p>
