--- a/ninth_amendment.html
+++ b/ninth_amendment.html
@@ -71,7 +71,7 @@
 
 <h2>Ninth Amendment</h2>
 <h3 class="regular_text">The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.</h3>
-<img class="responsive_img" src="images/RyanKuo_ninthamendment.jpg">
+<img class="responsive_img" src="images/RyanKuo_ninthamendment.jpg" alt="view of vertical computer monitor with Father Figure open on screen"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>Ryan Kuo</h2>
 
@@ -87,6 +87,8 @@ Dimensions variable</p>
 <p>The encounter with the computer aims to impart a material sense of a contradiction at the center of American identity. The Ninth Amendment, which accounts for “certain” rights enumerated as well as “others retained” elsewhere, implies that the rights of the people by nature remain in excess of what can be described. We have a known constitution, but we do not know what constitutes the exception.</p>
 
 <p>This contradiction is inevitably linked to whiteness, the silent majority that holds its tacit rights in reserve like an arms stockpile. It can be argued that the American exception is freedom from accountability, a freedom symbolized and protected by the safety mechanism built into the American contract. For users of the system, then, to what extent is the American dream coterminous with the guarantees of white supremacy? What can define the limit of self-governance?</p>
+
+<img class="responsive_img" src="images/RyanKuo_ninthamendment_2.jpg" alt="view of Father Figure from the right side, with player at keyboard and person in a hat leaning over watching"><p style="font-size: small"><i>Photo courtesy The Frank-Ratchye Studio for Creative Inquiry</i></p>
 
 <h4>Curator Commentary</h4>
 <p>One way to think about game design is the creation of spaces of possibility inside of which players play. The Ninth Amendment concerns itself with making clear that the space of possibility defined by the Constitution and its amendments will always be incomplete and subject to change. Depending on your perspective, the Ninth Amendment functions as an acknowledgment, a backstop, a tool, or a trap. As an acknowledgment, the Ninth recognizes the limits of its authors’ ability to capture in the Constitution all important rights, both those known and those yet to be known. As a backstop, the Ninth served to placate those concerned about the Bill of Rights being interpreted as fully defining individual rights under the Constitution. As a tool, the Ninth affords those with deep knowledge of the Constitution the tools to expand the rights minimally outlined in the original document and its amendments. And as a trap, the Ninth allows those in power to change the rules to benefit or harm. In all four cases, the Bill of Rights is made from and about language, and the ways it and the larger Constitution enumerate if not a ruleset, then a value system for the United States.</p>
