--- a/second_amendment.html
+++ b/second_amendment.html
@@ -70,7 +70,7 @@
 
 <h2>Second Amendment</h2>
 <h3 class="regular_text">A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.</h3>
-<img class="responsive_img" src="images/AndyMalone_secondamendment.jpg">
+<img class="responsive_img" src="images/AndyMalone_secondamendment.jpg" alt="Photo of the work showing the lower part with sliding block puzzle composed of eight blocks in a three-by-three grid, and upper portion with four flip boards, one plotter screen, and the embedded drum and hammers"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>Andy Malone</h2>
 
@@ -102,6 +102,8 @@
 <p>Standoff is about appreciating the spirit of the Second Amendment while despising gun violence. It is about reconciling American mythology with American brutality.</p>
 
 <p><i>Huge thanks to Jeff Smith (SmithMade), Brian Covington (Proto Cast Inc.), Niko Solomos (Display Group), Ed O’Toole (George P. Johnson), Wendy Marvel (FlipBooKit), David Smiertka, Brad Litwin, and JP Kelly for their fabrication support and expertise. I would also like to send love to my wife, Elaine, and my children, Julia and Martin, for their patience, encouragement, and inspiration.</i></p>
+
+<img class="responsive_img" src="images/AndyMalone_secondamendment_2.jpg" alt="Close up of sliding block puzzle"><p style="font-size: small"><i>Photo by John Sharp</i></p>
 
 <h4>Curator Commentary</h4>
 <p>One working mental model of how, exactly, guns work is based on the loading of a revolver: someone loads six bullets into the cylinder, holds the gun by the handle, gives it a flick to spin the cylinder, then a flick in the other direction to reseat the cylinder in the frame, points the barrel toward the target, and pulls the trigger, which releases the hammer, which in turn pushes a bullet out of the cylinder, through the barrel, and toward the target. Or maybe your understanding comes from a more contemporary gun with a magazine: bullets are one by one fed into a clip, which is in turn seated in the handle, enabling each bullet to be propelled into the cylinder for firing.</p>
