--- a/seventh_amendment.html
+++ b/seventh_amendment.html
@@ -69,7 +69,7 @@
 
 <h2>Seventh Amendment</h2>
 <h3 class="regular_text">In Suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be preserved, and no fact tried by a jury, shall be otherwise re-examined in any Court of the United States, than according to the rules of the common law.</h3>
-<img class="responsive_img" src="images/ChakravartyMcNeelyMaow_seventhamendment.jpg">
+<img class="responsive_img" src="images/ChakravartyMcNeelyMaow_seventhamendment.jpg"><p style="font-size: small" alt="Screenshot of gameplay, with player's hand avatars gesturing over five lines along which orbs travel"><p style="font-size: small"><i>Photo courtesy of the artists</i></p>
 
 <h2>Arnab Chakravarty, Ian McNeely, and Moaw!</h2>
 
@@ -83,6 +83,8 @@ Cabinet dimensions 29.5 inches wide by 29.5 inches deep by 78.75 inches high</p>
 <p>By establishing a constitutional right to a trial by jury, the Seventh Amendment introduces the wildest and most unpredictable of variables into the American civil-justice system: human beings. With Verbal Gymnastics, we aimed to create a bespoke arcade game that facilitates the exploration of that human element. Why an arcade game? They’re exceptionally inclusive and engaging. Like jury trials, arcade games have a performative component. They are public spectacles that welcome an audience and invoke discussion. They’re easy for a casual participant to learn but challenging to master. And the structure of our arcade game is replayable across multiple cases with exciting decisions and varied results. We are daring players to experiment and explore civil-jury trials, seeking new outcomes and pioneering new high scores.</p>
 
 <p>There is also a broader question we hope audiences will examine: “Was justice served?” These are the words that conclude each game of Verbal Gymnastics. They point to the paradoxical nature of a system of law that tasks imperfect people with pursuing a perfect ideal. And since the Seventh Amendment endows ordinary people with the power to award or deny justice, we must cultivate curiosity about justice in ordinary people.</p>
+
+<img class="responsive_img" src="images/ChakravartyMcNeelyMaow_seventhamendment_2.jpg"><p style="font-size: small" alt="Photo of player standing in front of arcade cabinet"><i>Photo by John Berens</i></p>
 
 <h4>Curator Commentary</h4>
 <p>The Seventh Amendment invests authority in the truth-deciphering skills of a jury. Inside of this is an assumption that a group of individuals can discern truth from the flow of narratives and evidence of the two parties. Though not applied to states, the social form of the jury trial—one not elaborated upon in any detail within the amendment’s fifty-one words beyond the hand-waving toward whatever might be implied as “common law”—became sacrosanct in court trials. The stakes are high for a jury’s ability to perform this duty. How does one ensure that a jury will indeed locate the truth and pass down the appropriate verdict?</p>
