--- a/sixth_amendment.html
+++ b/sixth_amendment.html
@@ -70,7 +70,7 @@
 
 <h2>Sixth Amendment</h2>
 <h3 class="regular_text">In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, and to be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defence.</h3>
-<img class="responsive_img" src="images/PeterBradley_sixthamendment.jpg">
+<img class="responsive_img" src="images/PeterBradley_sixthamendment.jpg" alt="Player standing at stand at keyboard in front of computer screen on easel on which Nomologos appears"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>Peter Bradley</h2>
 
@@ -88,6 +88,8 @@
 <p>From the inside, language is more like a thesaurus. It’s a dynamic system of relations: of similitude and difference, of inclusion and exclusion, of echoes morphological and historic. A word acquires meaning against the differential net of all the others, and it keeps its meaning fixed covalently with its neighbors. Words are like atoms in the sense molecules of an era. They are like a man who is one person at work and another at home and restored to a former self entirely in the company of his childhood friends.</p>
 
 <p>Linguists call these little verbal societies clusters, and in their association the coherence of meaning is sustained. Nomologos is an invitation to explore their bonds and boundaries. It is a puzzle whose solution demands a kind of semantic algebra. Across the sequence of signifiers that comprise the game, the player will encounter the core concepts of the Sixth Amendment—“speedy,” “public,” “impartial,” “vicinage,” “notice,” “witness,” “counsel”—and from these landmarks circumlocute the hermeneutic space of jurisprudence.</p>
+
+<img class="responsive_img" src="images/PeterBradley_sixthamendment_2.jpg" alt="Player standing at stand at keyboard in front of computer screen on easel on which Nomologos appears"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h4>Curator Commentary</h4>
 <p>Words are contingent, even those in which we invest a good deal of trust. Words can be circumvented and otherwise worked around. The Constitution constructs ways of being together from words, leaving us with an infrastructure ripe for use, abuse, and misuse. This plays out in the Sixth Amendment—though not found within the amendment’s language, the “trial penalty” Suja A. Thomas discusses sidesteps the intention of the Sixth for the vast majority of those accused of a crime. If the words guaranteeing us the right to a speedy and public trial are put in jeopardy by the threat of greater penalty from that very trial, what value does the Sixth Amendment hold for most accused?</p>
