--- a/third_amendment.html
+++ b/third_amendment.html
@@ -70,7 +70,7 @@
 
 <h2>Third Amendment</h2>
 <h3 class="regular_text">No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.</h3>
-<img class="responsive_img" src="images/ViTrinh_thirdamendment.jpg">
+<img class="responsive_img" src="images/ViTrinh_thirdamendment.jpg" alt="Screenshot of game showing one of thirty levels"><p style="font-size: small"><i>Screenshot courtesy of the artist</i></p>
 
 <h2>Vi Trinh</h2>
 
@@ -88,6 +88,8 @@ Dimensions variable</p>
 <p>How do we apply former structures, laws, and values on a rapidly expanding frontier of powerful technology? Data analysis on a grand scale has widened the scope of possible good and harm that large institutions can do. Big data and cyber surveillance are a constantly expanding frontier. There are still very few rules and restrictions to abide by, no one to answer to, and no checks on abuses of power. Currently we are expecting corporations and government institutions to hold their own leash. Cyber Soldiers in Cyber Houses shows how data and surveillance technology affects us in the past and in the present and asks what we are willing to allow in the future.</p>
 
 <p><i>Special thanks to Athena Hosek for programming contributions that made the completion of this project possible.</i>
+
+<img class="responsive_img" src="images/ViTrinh_thirdamendment_2.jpg" alt="Person seated at desk with keyboard and mouse in front of screen on easel, with the game on the screen"><p style="font-size: small"><i>Screenshot courtesy of the artist</i></p>
 
 <h4>Curator Commentary</h4>
 <p>In our call for submissions for this exhibition, we anticipated a lot of interest in the First and Second Amendments, and maybe some in the Fifth, possibly the Fourth. To our surprise, the Third Amendment proved to be among the most popular, doubling the number received for the Second Amendment. The underlying right described in the Third Amendment—protection from soldiers taking residence in a private home—feels distant, even quaint. Even if seldom referenced in court proceedings, the Third Amendment remains present in more colloquial contexts. While we have not had reason to literally house military representatives of the federal government in our homes, the broader implications of privacy from the federal government falls within popular understandings of the Third Amendment. More specifically, popular interpretations assume the Third Amendment affords privacy from government in domestic spaces. Inherent in this is the presumption that the federal government cannot trump local and state jurisdictions in a broad array of situations.</p>
