--- a/fourth_amendment.html
+++ b/fourth_amendment.html
@@ -69,7 +69,7 @@
 
 <h2>Fourth Amendment</h2>
 <h3 class="regular_text">The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized.</h3>
-<img class="responsive_img" src="images/Peterson_Datu_fourthamendment.jpg">
+<img class="responsive_img" src="images/Peterson_Datu_fourthamendment.jpg" alt="Person standing in front of iPad on which the game, Contempt is displayed"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>Latoya Peterson and Cherisse Santa Cruz Datu</h2>
 
