--- a/tenth_amendment.html
+++ b/tenth_amendment.html
@@ -67,7 +67,7 @@
 
 <h2>Tenth Amendment</h2>
 <h3 class="regular_text">The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</h3>
-<img class="responsive_img" src="images/artscodes_tenthamendment.jpg" alt="Three people interact with the artwork, v.erses. The work is composed of a 9-sided column in which tablet screens are embedded">
+<img class="responsive_img" src="images/artscodes_tenthamendment.jpg" alt="Three people interact with the artwork, v.erses. The work is composed of a 9-sided column in which tablet screens are embedded"><p style="font-size: small"><i>Photo by John Berens</i></p>
 
 <h2>arts.codes (Melissa F. Clarke and Margaret Schedel)</h2>
 <p>With engineering assistance by Kari Barry and Omkar Bhatt, networking by Nick Hwang, music interaction by Susie Green, and rap lyrics and performance by Toni Blackman</p>
