--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <!-- ------ CONTENT ------ -->
            
 <div class="leftColumn">
-<img class="responsive_img" src="images/FederalHall_exhibition.jpg">
+<img class="responsive_img" src="images/FederalHall_exhibition.jpg" alt="Photo from above of exhibition at Federal Hall"><p style="font-size: small"><i>Photo courtesy of The Frank-Ratchye Studio for Creative Inquiry</i></p>
+
 <h2>Now on View at Federal Hall</h2>
 <h3>July 4 - August 30, 2022<br>15 Pine Street, NYC NY 10005</h3>
 <p>Federal Hall National Memorial will commemorate the 230th anniversary of the Bill of Rights in an unexpected way: with an exhibition of games. “Shall Make, Shall Be: The Bill of Rights at Play'' will open in Federal Hall’s Grand Rotunda July 4, 2022 and remain through August 31. To stay informed, please join <a href="https://forms.gle/DVKgrvTimvnij5o69" target="new">our mailing list</a>.</p>
