--- a/ninth_amendment.html
+++ b/ninth_amendment.html
@@ -50,6 +50,7 @@
   	 			<a href="eighth_amendment.html">8th Amendment</a>
   	 			<a href="ninth_amendment.html">9th Amendment</a>
   	 			<a href="tenth_amendment.html">10th Amendment</a>
+  	 			<a href="wall_street.html">Wall Street</a>
     		</div>
   		</li>
     	<li><a href="about.html">About</a></li>
@@ -88,7 +89,7 @@ Dimensions variable</p>
 
 <p>This contradiction is inevitably linked to whiteness, the silent majority that holds its tacit rights in reserve like an arms stockpile. It can be argued that the American exception is freedom from accountability, a freedom symbolized and protected by the safety mechanism built into the American contract. For users of the system, then, to what extent is the American dream coterminous with the guarantees of white supremacy? What can define the limit of self-governance?</p>
 
-<img class="responsive_img" src="images/RyanKuo_ninthamendment_2b.jpg" alt="Screenshot of gameplay in which player the player attempts to leave a room"><p style="font-size: small"><i>Screenshot courtesy of the artist</i></p>
+<img class="responsive_img" src="images/RyanKuo_ninthamendment_2b.jpg" alt="Screenshot of gameplay in which the player attempts to leave a room"><p style="font-size: small"><i>Screenshot courtesy of the artist</i></p>
 
 <h4>Curator Commentary</h4>
 <p>One way to think about game design is the creation of spaces of possibility inside of which players play. The Ninth Amendment concerns itself with making clear that the space of possibility defined by the Constitution and its amendments will always be incomplete and subject to change. Depending on your perspective, the Ninth Amendment functions as an acknowledgment, a backstop, a tool, or a trap. As an acknowledgment, the Ninth recognizes the limits of its authors’ ability to capture in the Constitution all important rights, both those known and those yet to be known. As a backstop, the Ninth served to placate those concerned about the Bill of Rights being interpreted as fully defining individual rights under the Constitution. As a tool, the Ninth affords those with deep knowledge of the Constitution the tools to expand the rights minimally outlined in the original document and its amendments. And as a trap, the Ninth allows those in power to change the rules to benefit or harm. In all four cases, the Bill of Rights is made from and about language, and the ways it and the larger Constitution enumerate if not a ruleset, then a value system for the United States.</p>
