--- a/fifth_amendment.html
+++ b/fifth_amendment.html
@@ -50,6 +50,7 @@
   	 			<a href="eighth_amendment.html">8th Amendment</a>
   	 			<a href="ninth_amendment.html">9th Amendment</a>
   	 			<a href="tenth_amendment.html">10th Amendment</a>
+  	 			<a href="wall_street.html">Wall Street</a>
     		</div>
   		</li>
     	<li><a href="about.html">About</a></li>
