--- a/wall_street.html
+++ b/wall_street.html
@@ -102,9 +102,7 @@
 
 <hr>
 
-<p><strong>Ryan Kuo</strong> creates works that are process-based, diagrammatic, and caught in a state of argument. He uses video games, productivity software, web design, and text to produce circuitous and unresolved movements that track the passage of objects through white escape routes. He holds a Master of Science in Art, Culture and Technology from MIT, and has held residencies at Pioneer Works and the Queens Museum Studio Program. Kuo’s works have been shown in venues such as the Whitney Museum of American Art, Queens Museum, TRANSFER, and bitforms gallery, and are distributed online at left gallery. His recent and forthcoming projects include File: A User’s Manual, an artist’s book about aspirational workflows modeled after software guides for power users; and Faith, a conversational AI agent that zealously embodies the blind “faith” underpinning both white supremacy and miserable white liberalism.</p>
-<p>Kuo lives and works in New York City. He is not a programmer.</p>
-<p><a href="https://rkuo.net" target="new">rkuo.net</a></p>
+<p><strong>Anthony Brave</strong> (Lakota & Chippewa-Cree) an Assistant Professor, Career Track, at WSU as well as a doctoral student in New York University’s department of Media, Culture, and Communication. His research is at the intersection of Indigenous studies and media studies. More particularly, he is interested in Indigenous game development and histories of computing & video games and their often-obfuscated entanglements with the logics of settler colonialism and racial capitalism. He has taught in South Korea, at the Northwest Indian College-Nisqually campus, The Evergreen State College, New York University, and Washington State University. While he has some video game industry experience as cultural consultant and writer, he prefers making his own little games.</p>
 
 
 </div>
